<?xml version="1.0"?>
<package>
  <name>libvlfeat</name>
  <version>0.0.0</version>
  <description>The libvlfeat package</description>

  <maintainer email="miquel@todo.todo">miquel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>