<?xml version="1.0"?>
<package>
  <name>libvlfeat</name>
  <version>0.0.0</version>
  <description>The libvlfeat package</description>

  <maintainer email="miquel.massot@uib.cat">Miquel Massot</maintainer>
  <maintainer email="francisco.bonin@uib.cat">Francisco Bonin</maintainer>

  <author email="vedaldi@robots.ox.ac.uk">Andrea Vedaldi</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>